2016/8/02 v88
	1. Use alt+right-mouse will put the auto-gen item buttons' item into black list, so it won't be generated.

2016/8/02 v87
	1. Fix the free mode for action bars, the action buttons would alsways be square.

2016/8/02 v86
	1. Fix the buff frame's pos changed by the system.

2016/8/02 v85
	1. Fix the buff frame don't display in correct position.

2016/8/01 v84
	1. Fix the minimap resize display error.

2016/7/31 v83
	1. The unit watch panel now generate frames from bottom to top.

2016/7/31 v82
	1. Minimap can be moved and resized.
	2. nameplateN id can be used in unit watch panel without problem.
	3. Update for IGAS v101.

2016/7/28 v81
	1. Fix a code error.

2016/7/27 v80
	1. The nameplates now can display information about target change and threat level.

2016/7/27 v79
	1. Fix the active spell's cooldown won't refresh if you active the hidden global cooldown option.

2016/7/26 v78
	1. Change the mechanism of the container items's refresh for auto-generated popup action bars, reduce the cost of the system.

2016/7/26 v77
	1. Change the font for the cast bar of the nameplate.

2016/7/26 v76
	1. Now the nameplate module works with the 'Show bigger nameplate' option.
	2. Fix the memory increment with IGAS-v100.
	3. Re-make the looks of the nameplates.

2016/7/24 v75
	1. Add some safeguard to make sure the class power don't disappear.

2016/7/24 v74
	1. Only display buff/defuff that duration less than 1 min on nameplates.

2016/7/24 v73
	1. Make the rune bar not flash when it appears.

2016/7/23 v72
	1. Fix the rune bar would be shown on non-player's nameplate.

2016/7/23 v71
	1. Active the name plate module.

2016/7/22 v69
	1. Replace the status bar's texture, make it looks a little better.

2016/07/22 v68
	1. Fix the hidden mana bar's background color

2016/07/22 v67
	1. Fix bugs of the spell cooldown line and auto popup action bar system.

2016/07/21 v66
	1. Update for wow 7.0, reset the player settings.

2016/07/10 v65