@@ -1,3 +1,6 @@
+2016/8/03 v89
+	1. Change the action button's style, fix the icon border, it'll looks more better.
+
 2016/8/02 v88
 	1. Use alt+right-mouse will put the auto-gen item buttons' item into black list, so it won't be generated.
 
